Added Proccess Fail Improve Son program

--- a/Ex1/Father/Father.vcxproj
+++ b/Ex1/Father/Father.vcxproj
@@ -140,6 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="procces.c" />
     <ClCompile Include="Father.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
